qa/apps/frontend/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clin-frontend
spec:
  template:
    spec:
      imagePullSecrets:
        - name: images-pull
      containers:
        - image: index.docker.io/ferlabcrsj/clin-frontend:4188432cd25bf782d2267a541eae046e21653fe8-1638458612 # {"$imagepolicy": "flux-clin-qa:frontend"}
          name: clin-frontend
