qa/apps/frontend/ingresses.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clin-frontend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - qa.clin.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: qa.clin.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: clin-frontend
            servicePort: 80
        - path: /search
          backend:
            serviceName: clin-ui
            servicePort: 80
        - path: /variant
          backend:
            serviceName: clin-ui
            servicePort: 80
        - path: /clinui
          backend:
            serviceName: clin-ui
            servicePort: 80
